multi vast support done